# Omniquery

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  databases.yaml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  homolog.yml
cli/: commands.py
docs/: README.md  architecture.md  ci-cd.md  configuration.md  development.md  getting-started.md  permissions.md  pipelines.md  project-structure.md  testing.md
pipelines/: clientes_datas.yaml  clientes_datas.yml  divergencia_pbs_snr.yaml  divergencia_pbs_snr.yml  divergencia_vendas_pbs_snr.json  divergencia_vendas_pbs_snr.yaml  pipeline_autocomplete.yml  senior_connection_test.yaml  senior_connection_test.yml
schemas/: pipeline.schema.json
scripts/: validate_pipelines.py
src/: app.py  exceptions.py
src/config/: __init__.py  database.py  logging_config.py  settings.py
src/core/beforeETL/: before.py  database_before.py
src/core/extract/: database_extractor.py  extractor.py
src/entities/: __init__.py  definition.py  extract.py  extraction.py  extraction_source.py  load.py  loader.py  output.py  parameter.py  pipeline.py  table.py
src/models/: base_model.py
src/types/: extract_types.py  file_output_format_types.py  table_types.py
src/util.py/: json_reader.py
src/utils/: database_config_reader.py  json_reader.py  retry.py
tests/: bench_transfer.py  conftest.py  test_app.py  test_entities.py
tests/e2e/: conftest.py  test_connections.py  test_loader_mssql.py  test_oracle_sim.py  test_output_postgres.py  test_pipeline_divergencia.py
tests/e2e/oracle_sim/: schema.py
tests/homolog/: conftest.py  test_connections.py  test_loader_mssql.py  test_oracle_sim.py  test_output_postgres.py  test_pipeline_clientes_datas.py  test_pipeline_divergencia.py  test_stress.py  test_stress_multiprocess.py
tests/unit/: test_app.py  test_entities.py  test_utils.py
