[project]
name = "omniquery"
version = "0.1.0"
description = "A versatile data querying and processing tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb-engine>=0.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-sqlalchemy>=1.4.53.38",
]
