[project]
name = "omniquery"
version = "0.1.0"
description = "A versatile data querying and processing tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "duckdb-engine>=0.17.0",
    "openpyxl>=3.1.5",
    "oracledb>=3.4.2",
    "pandas>=3.0.0",
    "pandas-stubs>=2.3.3.260113",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-sqlalchemy>=1.4.53.38",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "cli"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["duckdb.*", "oracledb.*", "pyodbc.*", "psycopg2.*"]
ignore_missing_imports = true
